--- a/Web.config
+++ b/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="UTF-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <!--
   如需如何設定 ASP.NET 應用程式的詳細資訊，請造訪
   http://go.microsoft.com/fwlink/?LinkId=169433
@@ -17,12 +17,10 @@
   </appSettings>
   <connectionStrings>
     <add name="dbconnConnection1" connectionString="Data Source=WIN-15205028481\SQLEXPRESS;Initial Catalog=cms_data;User ID=culturelaunch;Password=culturelaunchXnet" providerName="System.Data.SqlClient" />
-    <add name="dbconnConnection" connectionString="Data Source=LAPTOP-MEIV881E\SQLEXPRESS;Initial Catalog=cms_data;User ID=sa;Password=2@iiiuiii" providerName="System.Data.SqlClient"/>
-
+    <add name="dbconnConnection" connectionString="Data Source=LAPTOP-MEIV881E\SQLEXPRESS;Initial Catalog=cms_data;User ID=sa;Password=2@iiiuiii" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <location path="cardreceive.ashx">
     <system.web>
-
       <httpRuntime requestValidationMode="2.0" maxRequestLength="20240" executionTimeout="300" />
       <pages validateRequest="false" />
     </system.web>
@@ -33,22 +31,21 @@
     </system.web>
   </location>
   <system.web>
- 
-    <customErrors mode="Off">
-      <error statusCode="404" redirect="/404error"/>
-    </customErrors>
+    <customErrors mode="Off" />
     <!--上線要改成ON-->
     <httpHandlers>
       <add verb="*" path="AjaxFileUploadHandler.axd" type="AjaxControlToolkit.AjaxFileUploadHandler, AjaxControlToolkit" />
     </httpHandlers>
     <compilation debug="true" targetFramework="4.5">
-
       <assemblies>
         <add assembly="System.Data.Linq, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089" />
         <add assembly="System.Design, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B03F5F7F11D50A3A" />
         <add assembly="System.Web.Extensions.Design, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
         <add assembly="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089" />
         <add assembly="System.Data.Entity, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089" />
+        <!--add assembly="Newtonsoft.Json, Version=11.0.0.0, Culture=neutral, PublicKeyToken=30AD4FE6B2A6AEED" /-->
+        <add assembly="System.Net.Http, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B03F5F7F11D50A3A" />
+        <add assembly="Newtonsoft.Json, Version=11.0.0.0, Culture=neutral, PublicKeyToken=30AD4FE6B2A6AEED" />
       </assemblies>
     </compilation>
     <httpRuntime targetFramework="4.5" maxRequestLength="10240" executionTimeout="300" />
@@ -61,7 +58,6 @@
         <add assembly="Microsoft.AspNet.Web.Optimization.WebForms" namespace="Microsoft.AspNet.Web.Optimization.WebForms" tagPrefix="webopt" />
       </controls>
     </pages>
-
     <!--
             如果您正在部署具有多個網頁伺服器執行個體的雲端環境，
             您應該將工作階段狀態從 "InProc" 變更為 "Custom"。此外，
@@ -75,13 +71,7 @@
     </sessionState>
   </system.web>
   <system.webServer>
-    <urlCompression doDynamicCompression="true" />
-    <httpErrors>
-      <remove statusCode="404" subStatusCode="-1" />
-      <error statusCode="404" prefixLanguageFilePath=""
-        path="/404error" responseMode="ExecuteURL" />
-    </httpErrors>
-   <staticContent>
+    <staticContent>
       <remove fileExtension=".mp4" />
       <remove fileExtension=".ogv" />
       <remove fileExtension=".webm" />
@@ -110,30 +100,40 @@
     </rewrite>
     -->
     <validation validateIntegratedModeConfiguration="false" />
+    <modules runAllManagedModulesForAllRequests="true">
+      <remove name="FormsAuthentication" />
+      <remove name="UrlRoutingModule" />
+      <add name="UrlRoutingModule" type="System.Web.Routing.UrlRoutingModule, System.Web, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+      <remove name="WebDAVModule" />
+    </modules>
     <handlers>
       <add name="AjaxFileUploadHandler" verb="*" path="AjaxFileUploadHandler.axd" type="AjaxControlToolkit.AjaxFileUploadHandler, AjaxControlToolkit" />
+      <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
+      <remove name="OPTIONSVerbHandler" />
+      <remove name="TRACEVerbHandler" />
+      <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
+      <add name="UrlRoutingHandler" preCondition="integratedMode" verb="*" path="UrlRouting.axd" type="System.Web.HttpForbiddenHandler, System.Web,Version=2.0.0.0, Culture=neutral,PublicKeyToken=b03f5f7f11d50a3a" />
+      <remove name="WebDAV" />
+      <remove name="ExtensionlessUrl-Integrated-4.0" />
+      <add name="ExtensionlessUrl-Integrated-4.0" path="*." verb="GET,HEAD,POST,DEBUG,DELETE,PUT" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
     </handlers>
     <security>
       <requestFiltering>
         <requestLimits maxAllowedContentLength="4294967295" />
       </requestFiltering>
     </security>
-    <modules runAllManagedModulesForAllRequests="true">
-      <remove name="WebDAVModule"></remove>
-      <remove name="FormsAuthentication" />
-    </modules>
-        <defaultDocument>
-            <files>
-                <remove value="iisstart.htm" />
-                <add value="index.aspx" />
-            </files>
-        </defaultDocument>
+    <defaultDocument>
+      <files>
+        <remove value="iisstart.htm" />
+        <add value="index.aspx" />
+      </files>
+    </defaultDocument>
   </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
         <assemblyIdentity name="Newtonsoft.Json" culture="neutral" publicKeyToken="30ad4fe6b2a6aeed" />
-        <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-11.0.0.0" newVersion="11.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="WebGrease" culture="neutral" publicKeyToken="31bf3856ad364e35" />
@@ -167,6 +167,14 @@
         <assemblyIdentity name="System.Web.WebPages" publicKeyToken="31bf3856ad364e35" />
         <bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Web.Http" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.2.6.0" newVersion="5.2.6.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Net.Http.Formatting" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.2.6.0" newVersion="5.2.6.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
   <entityFramework>
@@ -177,21 +185,8 @@
   </entityFramework>
   <system.codedom>
     <compilers>
-      <compiler language="c#;cs;csharp" extension=".cs" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.CSharpCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:6 /nowarn:1659;1699;1701"/>
-      <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:14 /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+"/>
+      <compiler language="c#;cs;csharp" extension=".cs" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.CSharpCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:6 /nowarn:1659;1699;1701" />
+      <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:14 /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
     </compilers>
   </system.codedom>
-  <system.serviceModel>
-    <bindings>
-      <basicHttpBinding>
-        <binding name="CRDOrderServiceSoap">
-          <security mode="Transport" />
-        </binding>
-        <binding name="CRDOrderServiceSoap1" />
-      </basicHttpBinding>
-    </bindings>
-    <client>
-      <endpoint address="https://sslpayment.uwccb.com.tw/EPOSService/CRDOrderService.asmx" binding="basicHttpBinding" bindingConfiguration="CRDOrderServiceSoap" contract="ServiceReference1.CRDOrderServiceSoap" name="CRDOrderServiceSoap" />
-    </client>
-  </system.serviceModel>
 </configuration>
